update admin page

--- a/AminWeb/Areas/Admin/Views/Playlist/Index.cshtml
+++ b/AminWeb/Areas/Admin/Views/Playlist/Index.cshtml
@@ -65,6 +65,7 @@
                         <th scope="col">کد</th>
                         <th scope="col">عکس </th>
                         <th scope="col">مدرک کلاس</th>
+                        <th scope="col">ویدیوها</th>
                         <th scope="col">نام</th>
                         <th scope="col">تاریخ ثبت</th>
                         <th scope="col">تعداد بازدید </th>
