--- a/AminWeb/Areas/Admin/Views/Playlist/ListPlaylist.cshtml
+++ b/AminWeb/Areas/Admin/Views/Playlist/ListPlaylist.cshtml
@@ -19,8 +19,11 @@
                 }
                 else
                 {
-            <small class="text-info">خالی</small>
+                    <small class="text-info">خالی</small>
                 }
+            </td>
+            <td>
+                <a href="/Admin/Video/Index?PlaylistId=@item.PlaylistId" class="badge-success badge-pill">مشاهده</a>
             </td>
             <td>
                 @item.Title
