--- a/AminWeb/Areas/Admin/Views/User/ListUser.cshtml
+++ b/AminWeb/Areas/Admin/Views/User/ListUser.cshtml
@@ -32,6 +32,9 @@
                 }
             </td>
             <td>
+                <a href="/Admin/Video/Index?UserId=@item.UserId" class="badge-success badge-pill">مشاهده</a>
+            </td>
+            <td>
                 <a href="" class="fa fa-eye" title="مشاهده گردش های مالی" data-toggle="tooltip" data-placement="top">
                 </a>
             </td>
