--- a/AminWeb/Areas/User/Views/Video/UserVideoBlock.cshtml
+++ b/AminWeb/Areas/User/Views/Video/UserVideoBlock.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="text column">
         <div class="content column">
-            <a class="title">
+            <a class="title"  href="/VideoView/@Model.VideoId/@Model.Title.Replace(" ","-")">
                @Model.Title
             </a>
             <p class="desciption">
