--- a/AminWeb/Views/Video/VideoView.cshtml
+++ b/AminWeb/Views/Video/VideoView.cshtml
@@ -94,7 +94,7 @@
                 <h3>
                     @Model.Title
                 </h3>
-                <a href="#" class="tutor">
+                <a href="/Dashboard/@Model.UserId/@Model.UserNameVideo" class="tutor">
                     @Model.UserNameVideo
                 </a>
                 <p class="uk-margin-remove-bottom">
