--- a/AminWeb/Areas/Admin/Views/Chat/ViewChat.cshtml
+++ b/AminWeb/Areas/Admin/Views/Chat/ViewChat.cshtml
@@ -1,74 +1,23 @@
-﻿@model IEnumerable<DataLayer.Models.TblChat>
-@{
-    ViewBag.Title = "ViewChat";
-}
-
-@foreach (var item in Model)
-{
-    <li>
-        <div class="chat mat uk-padding uk-box-shadow-small column uk-margin-xlarge-bottom">
-
-
-            <div class="chat-room uk-margin-top uk-box-shadow-hover-large">
-                <ul class="uk-padding-remove">
-                    <li>
-                        <div class="message column">
-                            <div class="row">
-                                <span class="name uk-margin-auto-left" dir="ltr" uk-icon="chevron-left">نام و نام خانوادگی</span>
-                                <!--اگر پیغام توسط مخاطب و نه کاربر فرستاده شده باشد کد پایین را قرار دهید-->
-                                @*<span class="name uk-margin-auto-left" dir="ltr" uk-icon="chevron-right">نام و نام خانوادگی</span>*@
-                                <span class="date">16:20</span>
-                            </div>
-                            <p class="text">
-                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
-                            </p>
-                        </div>
-                    </li>
-
-                </ul>
-            </div>
-
-
-
-        </div>
-
-    </li>
+﻿@model IEnumerable<DataLayer.ViewModels.VmChatUsers>
 
 
 
 
+<div class="chat-room uk-margin-top uk-box-shadow-hover-large">
+    <ul class="uk-padding-remove">
+        @foreach (var item in Model)
+        {
 
+            <li class="message you column">
+                <div class="row">
+                    <a href="/Dashboard/@item.SenderId/@item.Name" class="name uk-margin-auto-left" dir="ltr" uk-icon="chevron-left">@item.Name</a>
+                    <span class="date"> @item.TimeSent.ToShamsi()</span>
+                </div>
+                <p class="text">
+                    @item.Message
+                </p>
+            </li>
 
-
-
-    @*<div>
-            <h1>پیام</h1>
-            @item.Message
-            <h1>ارسال کننده پیام</h1>
-            @item.TblUser1.Name
-            <h1>دریافت کننده</h1>
-
-            @item.TblUser.Name
-            <h1>زمان</h1>
-
-            @item.TimeSent
-        </div>*@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-}
+        }
+    </ul>
+</div>
