--- a/AminWeb/Views/ShopCart/Index.cshtml
+++ b/AminWeb/Views/ShopCart/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model DataLayer.ViewModels.VmShopCart
+﻿@using DataLayer.Models;
+@model DataLayer.ViewModels.VmShopCart
 @{
     ViewBag.Title = "Purchase";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -52,7 +53,7 @@
                     </div>
                 }
                 <div class="divider"></div>
-                <a class="pal"  href="/ShopCart/Payment">
+                <a class="pal" href="/ShopCart/Payment">
                     <div>
                         <img src="~/Resources/Static/Vector/Zarinpal.svg" alt="لوگو زرین پال" />
                         <span>زرین پال</span>
@@ -64,6 +65,22 @@
         <!-- #endregion -->
         @* MEHDIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII *@
         @*@Html.Partial("Playlist")*@
+
+
+    </div>
+
+    <div class="uk-margin-auto uk-margin-medium-top uk-width-2-3-at-m uk-width-1-1-at-s column">
+
+        @if (ViewBag.Playlist != null)
+        {
+            List<TblPlaylist> list = ViewBag.Playlist as List<TblPlaylist>;
+
+            foreach (var item in list)
+            {
+                @Html.Partial("_Playlist", item);
+            }
+        }
+
     </div>
 </div>
 
