--- a/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -74,6 +74,11 @@
                                     <a href="/Admin/Video">
                                         ویدیوها ها
                                     </a>
+                                </li> 
+                                <li>
+                                    <a href="/Admin/Video/Report">
+                                        تخلفات ویدیوها
+                                    </a>
                                 </li>
                             </ul>
                         </li>
