--- a/AminWeb/Areas/Admin/Views/Video/ListReport.cshtml
+++ b/AminWeb/Areas/Admin/Views/Video/ListReport.cshtml
@@ -3,7 +3,7 @@
 {
     foreach (var item in Model)
     {
-        <tr id="ticket_@item.ReportId" class="list-item">
+        <tr id="reportVideo_@item.ReportId" class="list-item">
             <td>@(Model.ToList().IndexOf(item)+1)</td>
             <td>
                 <a href="/VideoView/@item.VideoId/@item.TblVideo.Title.Replace(" ","-")">
@@ -13,14 +13,15 @@
                     }
                 </a>
             </td>
+            <td>@item.TblVideo.Title</td>
             <td>@item.DateSent.ToShamsi()</td>
             <td>
-                <a href="#" onclick="viewTicket(@item.ReportId)" class="fa fa-eye" title="مشاهده تیکت  " data-toggle="tooltip" data-placement="top">
+                <a href="#" onclick="viewVideoReport(@item.ReportId)" class="fa fa-eye" title="مشاهده تیکت  " data-toggle="tooltip" data-placement="top">
                 </a>
             </td>
             <td>
                 <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
-                    <a onclick="deleteTicket(@item.ReportId)" data-toggle="modal" data-target="#modalSave"><i class="btn fas fa-trash mr-2 text-danger"></i></a>
+                    <a onclick="deleteVideoReport(@item.ReportId)" data-toggle="modal" data-target="#modalSave"><i class="btn fas fa-trash mr-2 text-danger"></i></a>
                 </span>
             </td>
         </tr>
