--- a/AminWeb/Areas/User/Views/Doc/Upload.cshtml
+++ b/AminWeb/Areas/User/Views/Doc/Upload.cshtml
@@ -1,19 +1,16 @@
 ﻿@model DataLayer.MetaData.MdDoc
 @{
-    ViewBag.Title = "AccountCompletion";
-    Layout = "~/Areas/User/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "آپلود اطلاعات";
 }
 
-
-
 <div class="mat uk-padding uk-box-shadow-small uk-margin-xlarge-bottom">
-    @using (Html.BeginForm("Create", "Video", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("Upload", "Doc", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         <h3>
-            آپلود ویدیو جدید
+            آپلود مدارک
         </h3>
         <div class="form-group">
-            <label for="Title">تیتر ویدیو</label>
+            <label for="TellSabet">شماره تلفن </label>
             <div class="input-group">
                 @Html.EditorFor(m => m.TellSabet)
             </div>
@@ -21,24 +18,21 @@
                 @Html.ValidationMessageFor(model => model.TellSabet, "", new { @class = "uk-text-danger" })
             </span>
         </div>
-
         <div class="form-group">
-            <label for="Title">تیتر ویدیو</label>
-            <div class="input-group">
-                @Html.EditorFor(m => m.Address)
-            </div>
+            <label for="Address">آدرس</label>
+            @Html.EditorFor(m => m.Address)
             <span role="alert" class="alert">
                 @Html.ValidationMessageFor(model => model.Address, "", new { @class = "uk-text-danger" })
             </span>
         </div>
 
         <div class="form-group">
-            <label for="MainImage">عکس</label>
+            <label for="MainImage">کارت ملی</label>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
                 <span uk-icon="icon: cloud-upload"></span>
-                <span class="uk-text-middle">عکس خود را اینجا بیاندازید و یا</span>
+                <span class="uk-text-middle">کارت ملی خود را اینجا بیاندازید و یا</span>
                 <div uk-form-custom>
-                    <input type="file" name="MainImage">
+                    <input type="file" name="KarteMeliSahebEmtiazUrl">
                     <span class="blue">کلیک کنید</span>
                 </div>
             </div>
@@ -47,42 +41,12 @@
             </span>
         </div>
         <div class="form-group">
-            <label for="VideoDemo">دموی ویدیو</label>
+            <label for="Video">شناسنامه</label>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
                 <span uk-icon="icon: cloud-upload"></span>
-                <span class="uk-text-middle"> دموی ویدیو خود را اینجا بیاندازید و یا</span>
+                <span class="uk-text-middle">شناسنامه خود را اینجا بیاندازید و یا</span>
                 <div uk-form-custom>
-                    <input type="file" name="VideoDemoUrl">
-                    <span class="blue">کلیک کنید</span>
-                </div>
-            </div>
-            <span role="alert" class="alert">
-                @Html.ValidationMessageFor(model => model.MojavezTasisUrl, "", new { @class = "uk-text-danger" })
-            </span>
-        </div>
-
-
-        <div class="form-group">
-            <label for="Video">ویدیو</label>
-            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
-                <span uk-icon="icon: cloud-upload"></span>
-                <span class="uk-text-middle">ویدیو خود را اینجا بیاندازید و یا</span>
-                <div uk-form-custom>
-                    <input type="file" name="VideoUrl">
-                    <span class="blue">کلیک کنید</span>
-                </div>
-            </div>
-            <span role="alert" class="alert">
-                @Html.ValidationMessageFor(model => model.ParvaneAmuzeshgahUrl, "", new { @class = "uk-text-danger" })
-            </span>
-        </div>
-        <div class="form-group">
-            <label for="Video">ویدیو</label>
-            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
-                <span uk-icon="icon: cloud-upload"></span>
-                <span class="uk-text-middle">ویدیو خود را اینجا بیاندازید و یا</span>
-                <div uk-form-custom>
-                    <input type="file" name="VideoUrl">
+                    <input type="file" name="ShenasnameSahebEmtiazUrl">
                     <span class="blue">کلیک کنید</span>
                 </div>
             </div>
@@ -90,12 +54,32 @@
                 @Html.ValidationMessageFor(model => model.ShenasnameSahebEmtiazUrl, "", new { @class = "uk-text-danger" })
             </span>
         </div>
-
         <div class="form-group">
-            <label for="Description">توضیحات</label>
-            @Html.EditorFor(m => m.Address)
+            <label for="VideoDemo">مجوز تاسیس </label>
+            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
+                <span uk-icon="icon: cloud-upload"></span>
+                <span class="uk-text-middle"> مجوز تاسیس خود را اینجا بیاندازید و یا</span>
+                <div uk-form-custom>
+                    <input type="file" name="MojavezTasisUrl">
+                    <span class="blue">کلیک کنید</span>
+                </div>
+            </div>
             <span role="alert" class="alert">
-                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "uk-text-danger" })
+                @Html.ValidationMessageFor(model => model.MojavezTasisUrl, "", new { @class = "uk-text-danger" })
+            </span>
+        </div>
+        <div class="form-group">
+            <label for="Video">پروانه آموزشی </label>
+            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
+                <span uk-icon="icon: cloud-upload"></span>
+                <span class="uk-text-middle">پروانه آموزشی  خود را اینجا بیاندازید و یا</span>
+                <div uk-form-custom>
+                    <input type="file" name="ParvaneAmuzeshgahUrl">
+                    <span class="blue">کلیک کنید</span>
+                </div>
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.ParvaneAmuzeshgahUrl, "", new { @class = "uk-text-danger" })
             </span>
         </div>
 
