--- a/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                                     <a href="/Admin/Video">
                                         ویدیوها ها
                                     </a>
-                                </li> 
+                                </li>
                                 <li>
                                     <a href="/Admin/Video/Report">
                                         تخلفات ویدیوها
@@ -96,17 +96,39 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="/Admin/Home/About">
-                                       درباره ما
+                                        درباره ما
                                     </a>
                                 </li>
                                 <li>
                                     <a href="/Admin/Home/Contact">
-                                       قوانین سایت
+                                        قوانین سایت
                                     </a>
                                 </li>
                             </ul>
                         </li>
-
+                        <li class="nav-item dropdown">
+                            <a class="dropdown-toggle" href="javascript:void(0);">
+                                <span class="icon-holder">
+                                    <i class="fas fa-th-large"></i>
+                                </span>
+                                <span class="title">فروش </span>
+                                <span class="arrow">
+                                    <i class="fas fa-chevron-right"></i>
+                                </span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="/Admin/Older/Prices">
+                                        درصد و سقف برداشت
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/Admin/Home/Contact">
+                                       فروش کلی
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                         <li class="nav-item active">
                             <a href="/Admin/User">
                                 <span class="icon-holder">
@@ -115,7 +137,15 @@
                                 <span class="title">کاربران</span>
                             </a>
                         </li>
-
+                        <li class="nav-item active">
+                            <a href="/Admin/Doc">
+                                <span class="icon-holder">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                                <span class="title"> اطلاعات ارسالی کاربران</span>
+                            </a>
+                        </li>
+                      
                         <li class="nav-item active">
                             <a href="/Admin/Ticket">
                                 <span class="icon-holder">
