--- a/AminWeb/Areas/User/Views/Doc/Index.cshtml
+++ b/AminWeb/Areas/User/Views/Doc/Index.cshtml
@@ -2,11 +2,15 @@
     ViewBag.Title = "تکمیل اطلاعات";
 }
 
-<div class="mat uk-padding uk-box-shadow-small uk-margin-xlarge-bottom">
+<div class="mat uk-padding uk-box-shadow-small uk-margin-bottom">
 
     <h3>
         تکمیل اطلاعات
     </h3>
+
+    <p dir="rtl">
+        برای تبدیل حساب خود به حساب آموزشگاهی، مدارک لازم را ارائه دهید.
+    </p>
 
     <div class="row-reverse uk-margin-medium-top">
         <a href="/User/Doc/Upload" class="btn-primary">
