--- a/AminWeb/Content/Styles/Pages/VideoView.css
+++ b/AminWeb/Content/Styles/Pages/VideoView.css
@@ -170,6 +170,7 @@ backdrop-filter: saturate(80%);
 .video-playback {
   width: 100%;
   max-height: 480px;
+  background-color: #000;
   -moz-border-radius: 8px 8px 8px 8px;
   -webkit-border-radius: 8px 8px 8px 8px;
   border-radius: 8px 8px 8px 8px;
