--- a/AminWeb/Content/Styles/Pages/VideoView.scss
+++ b/AminWeb/Content/Styles/Pages/VideoView.scss
@@ -4,6 +4,7 @@
 .video-playback {
     width: 100%;
     max-height: 480px;
+    background-color: #000;
     @include border-radius(8px,8px,8px,8px);
     @include shadow-medium;
 }
