--- a/AminWeb/Areas/Admin/Content/Styles/style.css
+++ b/AminWeb/Areas/Admin/Content/Styles/style.css
@@ -1932,3 +1932,25 @@ table.hot-download td {
     border: 1px solid #ddd;
     border-radius: 3px;
 }
+
+.grid-2x2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.image {
+    max-width: 200px;
+    max-height: 200px;
+    -o-object-fit: contain;
+    object-fit: contain;
+    -o-object-position: center;
+    object-position: center;
+}
+
+.grid-auto-250px {
+    display: grid;
+    grid-template-rows: auto;
+    grid-gap: 24px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
