--- a/AminWeb/Areas/Admin/Views/Older/Prices.cshtml
+++ b/AminWeb/Areas/Admin/Views/Older/Prices.cshtml
@@ -10,20 +10,18 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-<div class="card-body">
-    <span>درصد</span>
-    <div class="form-group mx-sm-1 mb-2">
-        @Html.EditorFor(model => model.DarsadeSud, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "درصد" } })
-        @Html.ValidationMessageFor(model => model.DarsadeSud, "", new { @class = "text-danger" })
-    </div>
-    <span>سقف</span>
+        <div class="card-body">
+            <label>درصد</label>
+            <div class="form-group mt-1 mx-sm-1 mb-3">
+                @Html.EditorFor(model => model.DarsadeSud, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "درصد" } })
+                @Html.ValidationMessageFor(model => model.DarsadeSud, "", new { @class = "text-danger" })
+            </div>
 
-    <div class="form-group mx-sm-1 mb-2">
-        @Html.EditorFor(model => model.SaqfeBardasht, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = " سقف برداشت" } })
-        @Html.ValidationMessageFor(model => model.SaqfeBardasht, "", new { @class = "text-danger" })
-    </div>
-</div>
-        <div class="card-footer bg-white">
+            <label>سقف</label>
+            <div class="form-group mt-1 mx-sm-1 mb-3">
+                @Html.EditorFor(model => model.SaqfeBardasht, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = " سقف برداشت" } })
+                @Html.ValidationMessageFor(model => model.SaqfeBardasht, "", new { @class = "text-danger" })
+            </div>
             <div class="flex-row">
                 <button class="btn btn-primary">تایید</button>
             </div>
